# overfit-audit

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
examples/: noise_demo.py
overfit_audit/: __init__.py  dsr.py  min_btl.py  pbo.py  plots.py
tests/: test_dsr.py  test_min_btl.py  test_pbo.py
